tests/ui/impl-trait/in-trait/issue-102571.lower-impl-trait-in-trait-to-assoc-ty.stderr
error[E0308]: mismatched types
  --> $DIR/issue-102571.rs:20:9
   |
LL |     let () = t.bar();
   |         ^^   ------- this expression has type `Foo::{opaque#1}`
   |         |
   |         expected associated type, found `()`
   |
   = note: expected associated type `Foo::{opaque#1}`
                    found unit type `()`
help: a method is available that returns `Foo::{opaque#1}`
  --> $DIR/issue-102571.rs:8:5
   |
LL |     fn bar(self) -> impl Deref<Target = impl Display + ?Sized>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ consider calling `Foo::bar`
help: consider constraining the associated type `Foo::{opaque#1}` to `()`
   |
LL | fn foo<T: Foo< = ()>>(t: T) {
   |              +++++++

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
